// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dashboard /> Should render and match the snapshot 1`] = `
<div
  class="Dashboard__DashboardContainer-u5wi3k-0 focEzc"
>
  <div
    class="MuiPaper-root-142 MuiPaper-elevation1-145 MuiPaper-rounded-143 MuiCard-root-141 content"
  >
    <div
      class="MuiCardContent-root-169"
    >
      <h2
        class="MuiTypography-root-170 MuiTypography-h5-186"
      >
        Goals and Expenses
      </h2>
      <div
        class="MuiPaper-root-142 MuiPaper-elevation2-146 MuiPaper-rounded-143 DashboardContent-root-139"
      >
        <table
          class="MuiTable-root-206"
        >
          <tbody
            class="MuiTableBody-root-207"
          />
        </table>
      </div>
    </div>
  </div>
  <div />
  <div />
  <div>
    <div
      class="MuiSpeedDial-root-224 MuiSpeedDial-directionUp-226"
    >
      <button
        aria-controls="Actionmenu-actions"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Action menu"
        class="MuiButtonBase-root-242 MuiFab-root-232 MuiFab-primary-234 MuiSpeedDial-fab-225"
        style="transform: scale(1); webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiFab-label-233"
        >
          <span
            class="MuiSpeedDialIcon-root-245"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-251 MuiSpeedDialIcon-icon-246"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
          </span>
        </span>
        <span
          class="MuiTouchRipple-root-270"
        />
      </button>
      <div
        aria-orientation="vertical"
        class="MuiSpeedDial-actions-230 MuiSpeedDial-actionsClosed-231 MuiSpeedDial-directionUp-226"
        id="Actionmenu-actions"
        role="menu"
      >
        <button
          class="MuiButtonBase-root-242 MuiFab-root-232 MuiFab-sizeSmall-240 MuiSpeedDialAction-button-260 MuiSpeedDialAction-buttonClosed-261"
          role="menuitem"
          style="transition-delay: 60ms;"
          tabindex="-1"
          title="Add Income"
          type="button"
        >
          <span
            class="MuiFab-label-233"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-251"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-270"
          />
        </button>
        <button
          class="MuiButtonBase-root-242 MuiFab-root-232 MuiFab-sizeSmall-240 MuiSpeedDialAction-button-260 MuiSpeedDialAction-buttonClosed-261"
          role="menuitem"
          style="transition-delay: 30ms;"
          tabindex="-1"
          title="Add Expense"
          type="button"
        >
          <span
            class="MuiFab-label-233"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-251"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M18 17H6v-2h12v2zm0-4H6v-2h12v2zm0-4H6V7h12v2zM3 22l1.5-1.5L6 22l1.5-1.5L9 22l1.5-1.5L12 22l1.5-1.5L15 22l1.5-1.5L18 22l1.5-1.5L21 22V2l-1.5 1.5L18 2l-1.5 1.5L15 2l-1.5 1.5L12 2l-1.5 1.5L9 2 7.5 3.5 6 2 4.5 3.5 3 2v20z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-270"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dashboard /> when sId is not provided should render input component and match the snapshot 1`] = `
<div
  class="MuiPaper-root-278 MuiPaper-elevation1-281 MuiPaper-rounded-279 MuiCard-root-277"
>
  <div
    class="MuiCardContent-root-305"
  >
    <h2
      class="MuiTypography-root-306 MuiTypography-h4-321"
    >
      Please provide your spreadsheet Id
    </h2>
    <div
      class="MuiFormControl-root-342 MuiFormControl-marginNormal-343 SpreadsheetIdInputCard__TextField-ocjwh8-0 ihlGeT"
    >
      <label
        class="MuiFormLabel-root-357 MuiInputLabel-root-346 MuiInputLabel-formControl-351 MuiInputLabel-animated-354"
        data-shrink="false"
        for="spreadsheetId"
      >
        Your spreadsheet Id
      </label>
      <div
        class="MuiInputBase-root-377 MuiInput-root-364 MuiInput-underline-368 MuiInputBase-formControl-378 MuiInput-formControl-365"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-387 MuiInput-input-372"
          id="spreadsheetId"
          type="text"
          value=""
        />
      </div>
    </div>
    <p
      class="MuiTypography-root-306 MuiTypography-subheading-313"
    >
      Or click 'Create one for me' if you don't have one yet
    </p>
  </div>
  <div
    class="MuiCardActions-root-394"
  >
    <button
      class="MuiButtonBase-root-423 MuiButtonBase-disabled-424 MuiButton-root-397 MuiButton-text-399 MuiButton-flat-402 MuiButton-sizeSmall-420 MuiButton-disabled-417 MuiCardActions-action-396"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label-398"
      >
        OK
      </span>
    </button>
    <button
      class="MuiButtonBase-root-423 MuiButton-root-397 MuiButton-text-399 MuiButton-flat-402 MuiButton-sizeSmall-420 MuiCardActions-action-396"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-398"
      >
        Create one for me
      </span>
      <span
        class="MuiTouchRipple-root-426"
      />
    </button>
  </div>
</div>
`;

exports[`<Dashboard /> when sId is provided should not render input component and match the snapshot 1`] = `
<div
  class="Dashboard__DashboardContainer-u5wi3k-0 focEzc"
>
  <div
    class="MuiPaper-root-436 MuiPaper-elevation1-439 MuiPaper-rounded-437 MuiCard-root-435 content"
  >
    <div
      class="MuiCardContent-root-463"
    >
      <h2
        class="MuiTypography-root-464 MuiTypography-h5-480"
      >
        Goals and Expenses
      </h2>
      <div
        class="MuiPaper-root-436 MuiPaper-elevation2-440 MuiPaper-rounded-437 DashboardContent-root-433"
      >
        <table
          class="MuiTable-root-500"
        >
          <tbody
            class="MuiTableBody-root-501"
          />
        </table>
      </div>
    </div>
  </div>
  <div />
  <div />
  <div>
    <div
      class="MuiSpeedDial-root-518 MuiSpeedDial-directionUp-520"
    >
      <button
        aria-controls="Actionmenu-actions"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Action menu"
        class="MuiButtonBase-root-536 MuiFab-root-526 MuiFab-primary-528 MuiSpeedDial-fab-519"
        style="transform: scale(1); webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiFab-label-527"
        >
          <span
            class="MuiSpeedDialIcon-root-539"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-545 MuiSpeedDialIcon-icon-540"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
          </span>
        </span>
        <span
          class="MuiTouchRipple-root-564"
        />
      </button>
      <div
        aria-orientation="vertical"
        class="MuiSpeedDial-actions-524 MuiSpeedDial-actionsClosed-525 MuiSpeedDial-directionUp-520"
        id="Actionmenu-actions"
        role="menu"
      >
        <button
          class="MuiButtonBase-root-536 MuiFab-root-526 MuiFab-sizeSmall-534 MuiSpeedDialAction-button-554 MuiSpeedDialAction-buttonClosed-555"
          role="menuitem"
          style="transition-delay: 60ms;"
          tabindex="-1"
          title="Add Income"
          type="button"
        >
          <span
            class="MuiFab-label-527"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-545"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-564"
          />
        </button>
        <button
          class="MuiButtonBase-root-536 MuiFab-root-526 MuiFab-sizeSmall-534 MuiSpeedDialAction-button-554 MuiSpeedDialAction-buttonClosed-555"
          role="menuitem"
          style="transition-delay: 30ms;"
          tabindex="-1"
          title="Add Expense"
          type="button"
        >
          <span
            class="MuiFab-label-527"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-545"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M18 17H6v-2h12v2zm0-4H6v-2h12v2zm0-4H6V7h12v2zM3 22l1.5-1.5L6 22l1.5-1.5L9 22l1.5-1.5L12 22l1.5-1.5L15 22l1.5-1.5L18 22l1.5-1.5L21 22V2l-1.5 1.5L18 2l-1.5 1.5L15 2l-1.5 1.5L12 2l-1.5 1.5L9 2 7.5 3.5 6 2 4.5 3.5 3 2v20z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-564"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
